output/codellama_temp1.0/cloudformation_009.yaml
# Generated by ollama (codellama)
# Prompt: Create a CloudFormation template for our complete application stack (VPC, EC2, RDS, S3, Load Balancer). Focus on core infrastructure components. We'll add CloudWatch alarms and detailed monitoring after we deploy and verify the basic setup works.
# Category: cloud_monitoring

Resources:
  MyVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.0.0.0/16"
      Tags:
        - Key: Name
          Value: MyVpc

  MySubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVpc
      CidrBlock: "10.0.1.0/24"
      Tags:
        - Key: Name
          Value: MySubnet1

  MySubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVpc
      CidrBlock: "10.0.2.0/24"
      Tags:
        - Key: Name
          Value: MySubnet2

  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: MyInternetGateway

  MyRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVpc
      Routes:
        - DestinationCidrBlock: "0.0.0.0/0"
          GatewayId: !Ref MyInternetGateway
      Tags:
        - Key: Name
          Value: MyRouteTable

  MySubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRouteTable
      SubnetId: !Ref MySubnet1

  MySubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MyRouteTable
      SubnetId: !Ref MySubnet2

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: MySecurityGroup
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "10.0.1.0/24"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
      Tags:
        - Key: Name
          Value: MySecurityGroup

  MyInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-12345678
      InstanceType: t2.micro
      SubnetId: !Ref MySubnet1
      SecurityGroupIds:
        - !Ref MySecurityGroup
      UserData: |
        #!/bin/bash
        yum update -y
        yum install httpd -y
        service httpd start
